# pub-2025-Q8S

./: .gitignore  LICENSE  README.md  cluster.yaml  pyproject.toml
src/q8s/: __main__.py
src/q8s/resources/: cluster.yaml  user-data
src/q8s/scripts/: initialize_setups.py  install-k8s.sh  install_guest.py  q8s_cli.py  routing_master.py  routing_worker.py  setup-kube-ctl.sh  setup_host.sh  setup_master.sh
src/q8s/scripts/helper/: cluster_def.py  edit_net_def.py  exceptions.py  helper_functions.py  kubernetes_helper.py  make_master_routing_persistent.sh  openstack_communication.py  openstack_conn.py  q8s_logger.py
